adding iisc projecect page

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 											<p>RRT-Exploration and visual obstacle detection and avoidance package.</p>
 											<ul class="actions">
 												<li><a href="projects/exploration_and_obstacle_avoidance/" class="button small">Website</a></li>
-												<li><a href="https://github.com/phoenixrider12/Vox-Bot" class="button small">Code</a></li>
-												<li><a href="https://docs.google.com/presentation/d/15Tr9ttaVZmQwHbguTARzjeVO22R2nE5FTYrOWf2-XHw/edit?usp=sharing" class="button small">Report</a></li>
+												<li><a href="hhttps://github.com/phoenixrider12/Multi-VOLTA-Exploration-and-Dynamic-Map-Updates" class="button small">Code</a></li>
+												<li><a href="https://docs.google.com/presentation/d/1aI4XAEJ03-eVSFvvPp1vc2dhd3e40BZHbnoN6kscu6A/edit?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
 										<article>
