editing project pages

--- a/projects/exploration_and_obstacle_avoidance/index.html
+++ b/projects/exploration_and_obstacle_avoidance/index.html
@@ -163,11 +163,11 @@
                 <tr>
                         <center>
                           <a href=''><img class="round" style="width: 500;" src="map_merge.gif"/></a>
-                          <figcaption><i>Vox-Bot CAD design</i></figcaption>
+                          <figcaption><i>Map Merging</i></figcaption>
                         </center>
               </tr>
           </table>
-        <br><br>
+        <br>
         For manual multi-robot mapping, we are using standard LIDAR based SLAM Gmapping for individual robot to prepare individual maps and then merging them to produce a global map. For merging, a feature matching algorithm is used which detects overlapping features in individual maps and combines them with/without knowing the initial position of any robot. More details can be found <a href="http://wiki.ros.org/multirobot_map_merge">here</a>.
         <br><br>
 
@@ -200,7 +200,7 @@
               <tr>
                       <center>
                         <a href=''><img class="round" style="width: 600;" src="rrt_exploration.gif"/></a>
-                        <figcaption><i>Complete Pipeline of our solution</i></figcaption>
+                        <figcaption><i>RRT Exploration Simulation</i></figcaption>
                       </center>
             </tr>
         </table>
@@ -232,7 +232,7 @@
       <tr>
               <center>
                 <a href=''><img class="round" style="width: 700;" src="objectron.png"/></a>
-                <figcaption><i>Complete Pipeline of our solution</i></figcaption>
+                <figcaption><i>3D Object Detection Samples using Objectron</i></figcaption>
               </center>
     </tr>
 
