--- a/projects/multi_agent_coverage/index.html
+++ b/projects/multi_agent_coverage/index.html
@@ -167,7 +167,7 @@
                 <tr>
                         <center>
                           <a href=''><img class="round" style="width: 700;" src="bot.png"/></a>
-                          <figcaption><i>Vox-Bot CAD design</i></figcaption>
+                          <figcaption><i>Vox-Bot CAD Design</i></figcaption>
                         </center>
               </tr>
           </table>
@@ -183,7 +183,7 @@
               <tr>
                       <center>
                         <a href=''><img class="round" style="width: 700;" src="pipeline.png"/></a>
-                        <figcaption><i>Complete Pipeline of our solution</i></figcaption>
+                        <figcaption><i>Complete Pipeline of our Solution</i></figcaption>
                       </center>
             </tr>
         </table>
@@ -207,7 +207,7 @@
         <tr>
                 <center>
                   <a href=''><img class="round" style="width: 700;" src="mapping_time.png"/></a>
-                  <figcaption><i>Comparision of exploration time with different number of bots</i></figcaption>
+                  <figcaption><i>Comparision of Exploration Times with Different Number of Bots</i></figcaption>
                 </center>
         </tr>
     </table>
@@ -220,7 +220,7 @@
         <tr>
                 <center>
                   <a href=''><img class="round" style="width: 700;" src="voronoi.png"/></a>
-                  <figcaption><i>Generating voronoi diagram using Fortnes algorithm</i></figcaption>
+                  <figcaption><i>Generating Voronoi Diagrams using Fortnes Algorithm</i></figcaption>
                 </center>
         </tr><br>
         <!-- We then iterate using weighted center algorithm for calculating the desired voronoi cells and the positions of each agent. -->
@@ -239,7 +239,7 @@
         <tr>
                 <center>
                   <a href=''><img class="round" style="width: 400;" src="optimal_coverage.gif"/></a>
-                  <figcaption><i>Robots computing the path and optimal voronoi cell</i></figcaption>
+                  <figcaption><i>Robots Computing Path and Optimal Voronoi Cell</i></figcaption>
                 </center>
         </tr><br>
     </table>
@@ -249,11 +249,11 @@
         <tr>
                 <center>
                   <a href=''><img class="round" style="width: 500;" src="bpath1.png"/></a>
-                  <figcaption><i>Path distribution for arena 1</i></figcaption>
+                  <figcaption><i>Path Distribution for Arena 1</i></figcaption>
                 </center>
                 <center>
                     <a href=''><img class="round" style="width: 500;" src="bpath2.png"/></a>
-                    <figcaption><i>Path distribution for arena 2</i></figcaption>
+                    <figcaption><i>Path Distribution for Arena 2</i></figcaption>
                   </center>
         </tr>
     </table>
@@ -278,12 +278,12 @@
         <tr>
                 <center>
                   <a href=''><img class="round" style="width: 700;" src="airflow-study.png"/></a>
-                  <figcaption><i>Hypothetical system of the robot with full suction power</i></figcaption>
+                  <figcaption><i>Hypothetical System of Robot with Full Suction Power</i></figcaption>
                 </center>
                 <br>
                 <center>
                     <a href=''><img class="round" style="width: 500;" src="airflow-closeup.png"/></a>
-                    <figcaption><i>Airflow inside the central chamber</i></figcaption>
+                    <figcaption><i>Airflow Inside Central Chamber</i></figcaption>
                   </center>
         </tr>
     </table>
