editing profile photo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 											<li><a href="https://scholar.google.com/citations?user=AWhTyqwAAAAJ&hl=en&oi=ao" class="button big">Google Scholar</a></li>
 										</ul>
 									</div>
-									<span class="image object" style="width: 45%; height: 45%;">
+									<span class="image object">
 										<img src="images/image.jpeg"/>
 									</span>
 								</section>
@@ -229,7 +229,7 @@
 												<li><a href="https://docs.google.com/presentation/d/1wgCw-pj4WYZ1QgIoMBwp1pqgJasY5RpXskZN9Sr_edU/edit?usp=sharing" class="button small">Report</a></li>
 											</ul>
 										</article>
-										<article>
+										<!-- <article>
 											<a href="projects/pipe_traversal_bot/" class="image"><img src="images/ptb.png" alt="" /></a>
 											<h3>Pipe Traversal Robot</h3>
 											<p>16-DoF Quadruped trained using DDPG algorithm for movement in subterranean pipes environment.</p>
@@ -268,7 +268,7 @@
 												<li><a href="https://github.com/phoenixrider12/Automated-Traffic-Control-System" class="button small">Code</a></li>
 												<li><a href="https://docs.google.com/presentation/d/1JJ--6UHFh02VZ0OyQScio4vEjmKr1QLc/edit?usp=sharing&ouid=110229048173610613882&rtpof=true&sd=true" class="button small">Report</a></li>
 											</ul>
-										</article>
+										</article> -->
 									</div>
 								</section>
 						</div>
