adding uav ugv webpage

--- a/projects/uav_ugv_navigation/index.html
+++ b/projects/uav_ugv_navigation/index.html
@@ -225,7 +225,7 @@
       <tr>
               <center>
                 <a href=''><img class="round" style="width: 900;" src="unet_results.png"/></a>
-                <figcaption><i>Comparision of exploration time with different number of bots</i></figcaption>
+                <figcaption><i>UNET Segmentation Results</i></figcaption>
               </center>
       </tr>
   </table>
@@ -235,7 +235,7 @@
     <tr>
             <center>
               <a href=''><img class="round" style="width: 700;" src="mapping_block.png"/></a>
-              <figcaption><i>Comparision of exploration time with different number of bots</i></figcaption>
+              <figcaption><i>Exploration Pipeline</i></figcaption>
             </center>
     </tr>
 </table>
@@ -279,7 +279,6 @@ detect.
         <tr>
                 <center>
                   <a href=''><img class="round" style="width: 900;" src="nav_flow.png"/></a>
-                  <!-- <figcaption><i>Generating voronoi diagram using Fortnes algorithm</i></figcaption> -->
                 </center>
         </tr>
         <!-- We then iterate using weighted center algorithm for calculating the desired voronoi cells and the positions of each agent. -->
@@ -291,7 +290,7 @@ detect.
       <tr>
               <center>
                 <a href=''><img class="round" style="width: 800;" src="ugv_detect_flow.png"/></a>
-                <figcaption><i>Comparision of exploration time with different number of bots</i></figcaption>
+                <figcaption><i>Detection and Tracking Pipeline</i></figcaption>
               </center>
       </tr>
     </table>
