adding houeshold bot

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 										<article>
 											<a href="projects/household_bot/" class="image"><img src="images/mphb.gif" alt="" /></a>
 											<h3>Multi-Purpose Household Robot</h3>
-											<p>Fabricated a ground robot to perform household chores and baby care.</p>
+											<p>Fabricated a ground robot to perform household chores and child care.</p>
 											<ul class="actions">
 												<li><a href="projects/household_bot/" class="button small">Website</a></li>
 												<li><a href="https://github.com/phoenixrider12/Multi-Purpose-HouseHold-Bot" class="button small">Code</a></li>
