--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 										<p><b>My research is focussed on developing Learning-Based Perception and Control Systems with Formal Safety Analysis for Autonomous Agents</b>.</p>
 										
 										<ul class="actions">
-											<li><a href="https://phoenixrider12.github.io/assets/Aryaman_CV_Sept2023.pdf" class="button big">C.V.</a></li>
+											<li><a href="assets/Aryaman_CV_Sept2023.pdf" class="button big">C.V.</a></li>
 											<li><a href="https://scholar.google.com/citations?user=AWhTyqwAAAAJ&hl=en&oi=ao" class="button big">Google Scholar</a></li>
 										</ul>
 									</div>
