editing failure mitigation webpage name

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 											<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal
 										</p>
 										<ul class="actions">
-											<li><a href="failure_mitigation" class="button small">Website</a></li>
+											<li><a href="FailureMitigation" class="button small">Website</a></li>
 											<li><a href="https://arxiv.org/pdf/2309.13475.pdf" class="button small">PDF</a></li>
 											<li><a href="https://www.youtube.com/watch?v=Z9DtIEBrSvs&t=4s" class="button small">Video</a></li>
 											<li><a href="https://github.com/phoenixrider12/visual_failure_mitigation" class="button small">Code</a></li>
