adding second paper

--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
 									</div>
 								</div>
 
+								<div>
+									
+									<h3> Deep Reinforcement Learning for Sim2Real Policy Transfer in VTOL-UAVs Offshore Docking Operations </h3>
+									<!-- Capturing system-level failures of vision-based controllers and mitigting them using fallback mechanisms for ensuring safety in autonomous systems. -->
+									<!-- <p></p> -->
+									<p>
+										<b>Aryaman Gupta</b>, Ali Mohamed Ali, Hashim A.Hashim
+									</p>
+									<ul class="actions">
+										<li><a href="#" class="button small">Website</a></li>
+										<li><a href="#" class="button small">PDF</a></li>
+										<li><a href="#" class="button small">Video</a></li>
+										<li><a href="#" class="button small">Code</a></li>
+									</ul>
+								</div>
+
 							</section>
 							
 							<!-- Section -->
