adding paper in news

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										<h2>News</h2>
 									</header>
 										<ul>
-												<li><b>[Nov 2023]</b> : New paper submitted to IEEE Transactions on Artificial Intelligence.</li>
+												<li><b>[Nov 2023]</b> : New paper on drone docking on offshore platforms using deep-RL submitted to IEEE Transactions on Artificial Intelligence.</li>
 												<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system failures in visual controllers in out on arxiv.</li>
 												<li><b>[May 2023]</b> : Started Research Internship at SIA Lab, USC.</li>
 												<li><b>[Jan 2023]</b> : Started Research Internship at Carleton University.</li>
