--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 									</header>
 										<ul>
 												<li><b>[Nov 2023]</b> : New paper on drone docking on offshore platforms using deep-RL submitted to IEEE Transactions on Artificial Intelligence.</li>
-												<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system failures in visual controllers in out on arxiv.</li>
-												<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system failures in visual controllers submitted to ICRA 2024.</li>
+												<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers is out on arxiv.</li>
+												<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers submitted to ICRA 2024.</li>
 												<li><b>[May 2023]</b> : Started Research Internship at SIA Lab, USC.</li>
 												<li><b>[Jan 2023]</b> : Started Research Internship at Carleton University.</li>
 												<li><b>[Dec 2022]</b> : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG</a>.</li>
