--- a/index.html
+++ b/index.html
@@ -48,7 +48,22 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/image.jpeg"/>
+										<!-- <img src="images/image.jpeg"/> -->
+
+										<img id="hover-image" src="images/image.jpeg" alt="Initial Image" onmouseover="changeImage()" onmouseout="restoreImage()">
+
+										<script>
+											function changeImage() {
+												// Replace 'your-hover-image.jpg' with the path to your hover image
+												document.getElementById("hover-image").src = "images/image2.jpg";
+											}
+										
+											function restoreImage() {
+												// Replace 'your-initial-image.jpg' with the path to your initial image
+												document.getElementById("hover-image").src = "images/image.jpeg";
+											}
+										</script>
+
 									</span>
 								</section>
 
