--- a/projects/small_world_networks/index.html
+++ b/projects/small_world_networks/index.html
@@ -222,21 +222,21 @@
 
     <h2><b><u>Actor-Critic Reinforcement Learning</u></b></h2>
 
-    Soft Actor-Critic Algorithm is based on a maximum entropy RL where the objective is to find the optimal policy that maximizes the expected long-term reward and long-term entropy. In a simple description, actor-critic is a combination of policy-based and value-based approaches. Learning of the actor is based policy gradient approach and critic is learned in a value-based fashion. In SAC, there are three networks: the actor network, the critic network, and the value network.
+    <!-- Soft Actor-Critic Algorithm is based on a maximum entropy RL where the objective is to find the optimal policy that maximizes the expected long-term reward and long-term entropy. In a simple description, actor-critic is a combination of policy-based and value-based approaches. Learning of the actor is based policy gradient approach and critic is learned in a value-based fashion.
     <table align=center width=1000px>
       <tr>
               <center>
-                <a href=''><img class="round" style="width: 700;" src="sac.png"/></a>
+                <a href=''><img class="round" style="width: 700;" src="PPO.png"/></a>
                 <figcaption><i>Soft Actor Critic Algorithm</i></figcaption>
               </center>
       </tr>
-  </table>
+  </table> -->
 
-  <h2><b><u>Using SAC in WSNs</u></b></h2>
+  <h2><b><u>Using PPO in WSNs</u></b></h2>
 
-  We are using the SAC algorithm to introduce long-range links in the network. We define the algorithm as follows:
+  We are using the PPO algorithm to introduce long-range links in the network. We define the algorithm as follows:
   <br>
-  1. <b>Environment</b>: The simulated WSN serves as the environment for SAC<br>
+  1. <b>Environment</b>: The simulated WSN serves as the environment for PPO<br>
   2. <b>State</b>: The network graph serves as the state of the network<br>
   3. <b>Action</b>: The node IDs that need to be connected are actions<br>
   4. <b>Reward</b>: Reward is defined in terms of ACC and APL as follows:<br>
