--- a/projects/small_world_networks/index.html
+++ b/projects/small_world_networks/index.html
@@ -232,7 +232,7 @@
       </tr>
   </table> -->
 
-  <h2><b><u>Using PPO in WSNs</u></b></h2>
+  <!-- <h2><b><u>Using PPO in WSNs</u></b></h2> -->
 
   We are using the PPO algorithm to introduce long-range links in the network. We define the algorithm as follows:
   <br>
