ending mitacs intern

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 									
 										<h3>Carleton University</h3>
 										<p>
-											<b>Research Intern | <a href="https://carleton.ca/hhashim/">Dr. Hashim Mohamed</a> |</b> Jan 2023 - Present <br>
+											<b>Research Intern | <a href="https://carleton.ca/hhashim/">Dr. Hashim Mohamed</a> |</b> Jan 2023 - Dec 2023 <br>
 											<!-- <i>May 2023 - Present</i> <br> -->
 											Working on developing a deep-RL based docking mechanism for VTOL UAVs on offshore platforms.
 										</p>
@@ -394,6 +394,8 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+			<!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hhWzLsriQArkaGZVtesinkEc8TVVmJOucpupd7YiRCg&cl=ffffff&w=a"></script> -->
 
 	</body>
 </html>
