adding page views

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-	<script>
+	<!-- <script>
 		document.addEventListener('DOMContentLoaded', function () {
 			const hiddenDiv = document.getElementById('worldmap');
 
@@ -464,7 +464,7 @@
 			window.addEventListener('scroll', checkScroll);
 			checkScroll(); // Check on initial load
 		});
-	</script>
+	</script> -->
 
 </body>
 
