--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<div class="content">
 										<header>
 											<h1>Hi, I’m Aryaman</h1>
-											<p><b>I am senior undergraduate of Electronics Engineering at Indian Institute of Technology (BHU), Varanasi.</b></p>
+											<p><b>I am senior undergraduate of Electronics Engineering at Indian Institute of Technology (BHU), Varanasi. Check my recent <a href="assets/Aryaman_Research_Overview.pdf">Research</a>.</b></p>
 										</header>
 										<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">Safe and Intelligent Autonomy Lab</a> on <i>Safety-Critical Control of Autonomous Agents</i>.</p>
 										<p> I've also been working with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p>
@@ -55,6 +55,7 @@
 										
 										<ul class="actions">
 											<li><a href="assets/Resume.pdf" class="button big">RESUME</a></li>
+											<li><a href="assets/Aryaman_Research_Overview.pdf" class="button big">RESEARCH OVERVIEW</a></li>
 											<li><a href="https://scholar.google.com/citations?user=AWhTyqwAAAAJ&hl=en&oi=ao" class="button big">Google Scholar</a></li>
 										</ul>
 									</div>
