adding research overview

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										<p>I'm working with <a href="https://smlbansal.github.io/">Prof. Somil Bansal</a> at <a href="https://smlbansal.github.io/sia-lab/index.html">Safe and Intelligent Autonomy Lab</a> on <i>Safety-Critical Control of Autonomous Agents</i>.</p>
 										<p> I've also been working with <a href="https://carleton.ca/hhashim/">Prof. Hashim Mohamed</a> on <i>Deep-RL Based Docking Mechanism for VTOL UAVs on Offshore Platforms.</i></p>
 										<p>I've previously worked with <a href="https://ece.iisc.ac.in/bharadwaj-amrutur/">Dr. Bharadwaj Amrutur</a> at <a href="https://cps.iisc.ac.in/">RBBCPS, IISc</a> on <i>Mult-Agent Exploration and Dynamic Obstacle Avoidance</i>.</p>
-										<p><b>My research is focussed on developing Learning-Based Perception and Control Systems with Formal Safety Analysis for Autonomous Agents</b>.</p>
+										<p><b>My research is focussed on developing Safe Learning-Based Controls for Autonomous Agents in Safety-Critical Applications.</b>.</p>
 										
 										<ul class="actions">
 											<li><a href="assets/Resume.pdf" class="button big">RESUME</a></li>
