editing mitacs paper

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 										<li><a href="#" class="button small">PDF</a></li>
 										<li><a href="#" class="button small">Video</a></li>
 										<li><a href="#" class="button small">Code</a></li>
+										<li><i>(Currently Confidential)</i></li>
 									</ul>
 								</div>
 
