--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
 										<h2>News</h2>
 									</header>
 										<ul>
-												<li><b>[Nov 2023]</b> : New paper on drone docking on offshore platforms using deep-RL submitted to IEEE Transactions on Artificial Intelligence.</li>
+											<li><b>[Jan 2024]</b> : Selected to attend <a href="https://sites.google.com/view/researchweek24/home">Research Week with Google</a>.</li>
+											<li><b>[Nov 2023]</b> : New paper on drone docking on offshore platforms using deep-RL submitted to IEEE Transactions on Artificial Intelligence.</li>
 												<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers is out on arxiv.</li>
 												<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers submitted to ICRA 2024.</li>
-												<li><b>[May 2023]</b> : Started Research Internship at SIA Lab, USC.</li>
-												<li><b>[Jan 2023]</b> : Started Research Internship at Carleton University.</li>
-												<li><b>[Dec 2022]</b> : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG</a>.</li>
+												<li><b>[May 2023]</b> : Started Research Internship at <a href="https://smlbansal.github.io/sia-lab/">SIA Lab, University of Southern California</a>.</li>
+												<li><b>[Jan 2023]</b> : Started Research Internship at <a href="https://carleton.ca/rncsl/">RNCSL, Carleton University</a>.</li>
+												<li><b>[Dec 2022]</b> : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG (Robotics Research Group)</a>.</li>
 												<li><b>[May 2022]</b> : Started Research Internship at RBCCPS, IISc.</li>
 												<li><b>[Mar 2022]</b> : Started Research Internship at AISL, CWNU</li>
 												<li><b>[Dec 2021]</b> : First Runner Up in AIITRA Robotics Challenge</li>
