adding icra result

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 										<h2>News</h2>
 									</header>
 										<ul>
-											<li><b>[Jan 2024]</b> : My <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> got accepted into <a href="https://2024.ieee-icra.org/">ICRA 2024</a></a>.</li>
+											<li><b>[Jan 2024]</b> : My <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers got accepted into <a href="https://2024.ieee-icra.org/">ICRA 2024</a></a>.</li>
 											<li><b>[Jan 2024]</b> : Selected to attend <a href="https://sites.google.com/view/researchweek24/home">Research Week with Google</a>.</li>
 											<li><b>[Nov 2023]</b> : New paper on drone docking on offshore platforms using deep-RL submitted to IEEE Transactions on Artificial Intelligence.</li>
 											<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers is out on arxiv.</li>
-											<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers submitted to ICRA 2024.</li>
+											<!-- <li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers submitted to ICRA 2024.</li> -->
 											<li><b>[May 2023]</b> : Started Research Internship at <a href="https://smlbansal.github.io/sia-lab/">SIA Lab, University of Southern California</a>.</li>
 											<li><b>[Jan 2023]</b> : Started Research Internship at <a href="https://carleton.ca/rncsl/">RNCSL, Carleton University</a>.</li>
 											<li><b>[Dec 2022]</b> : Appointed as Tech Lead of <a href="https://robotics-club-iit-bhu.github.io/RoboReG/">RoboReG (Robotics Research Group)</a>.</li>
@@ -98,10 +98,9 @@
 										</header>
 										
 										<h3> Detecting and Mitigating System-Level Anomalies of Vision-Based Controllers </h3>
-										<!-- Capturing system-level failures of vision-based controllers and mitigting them using fallback mechanisms for ensuring safety in autonomous systems. -->
-										<!-- <p></p> -->
 										<p>
-											<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal
+											<b>Aryaman Gupta</b>, Kaustav Chakraborty, Somil Bansal<br>
+											<b>IEEE International Conference on Robotics and Automation (ICRA) 2024</b>
 										</p>
 										<ul class="actions">
 											<li><a href="FailureMitigation" class="button small">Website</a></li>
