--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
 			function restoreImage() {
 				// Replace 'your-initial-image.jpg' with the path to your initial image
-				document.getElementById("hover-image").src = "images/image.jpeg";
+				document.getElementById("hover-image").src = "images/image3.jpg";
 			}
 		</script>
 	</head>
@@ -62,7 +62,7 @@
 									<span class="image object">
 										<!-- <img src="images/image.jpeg"/> -->
 
-										<img id="hover-image" src="images/image.jpeg" alt="Initial Image" onmouseover="changeImage()" onmouseout="restoreImage()">
+										<img id="hover-image" src="images/image3.jpg" alt="Initial Image" onmouseover="changeImage()" onmouseout="restoreImage()">
 
 									</span>
 								</section>
