--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<ul>
 											<li><b>[Jan 2024]</b> : My <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers got accepted into <a href="https://2024.ieee-icra.org/">ICRA 2024</a></a>.</li>
 											<li><b>[Jan 2024]</b> : Selected to attend <a href="https://sites.google.com/view/researchweek24/home">Research Week with Google</a>.</li>
-											<li><b>[Nov 2023]</b> : New paper on drone docking on offshore platforms using deep-RL submitted to IEEE Transactions on Artificial Intelligence.</li>
+											<li><b>[Nov 2023]</b> : New paper on drone docking on offshore platforms using deep-RL submitted to Applied Soft Computing Journal.</li>
 											<li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers is out on arxiv.</li>
 											<!-- <li><b>[Sept 2023]</b> : New <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers submitted to ICRA 2024.</li> -->
 											<li><b>[May 2023]</b> : Started Research Internship at <a href="https://smlbansal.github.io/sia-lab/">SIA Lab, University of Southern California</a>.</li>
