updating mitacs paper acceptance

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 										<h2>News</h2>
 									</header>
 										<ul>
+											<li><b>[Nov 2023]</b> : My paper on drone docking on offshore platforms using deep-RL got accepted to Applied Soft Computing Journal.</li>
 											<li><b>[May 2024]</b> : Presented my <a href="https://arxiv.org/pdf/2309.13475.pdf">paper</a> on mitigating system-level failures in visual controllers at <a href="https://2024.ieee-icra.org/">ICRA 2024</a></a> in Yokohama, Japan.</li>
 											<li><b>[May 2024]</b> : Graduated from Indian Institute of Technology (IIT BHU) with major in Electronics Engineering.</li>
 											<li><b>[Feb 2024]</b> : Received Annenberg Fellowship by University of Southern California (USC) for PhD position in the ECE department.</li>
@@ -131,7 +132,7 @@
 										<li><a href="#" class="button small">PDF</a></li>
 										<li><a href="#" class="button small">Video</a></li>
 										<li><a href="#" class="button small">Code</a></li>
-										<li><i>(Currently Confidential)</i></li>
+										<li><i>(Releasing Soon)</i></li>
 									</ul>
 								</div>
 
